--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,10 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rldetailsContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/ivProfile"
+        android:transitionName="profile"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="@dimen/contact_detail_image_height" />
@@ -19,13 +22,15 @@
         <View
             android:id="@+id/vPalette"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:transitionName="palette" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_centerInParent="true"
             android:textSize="@dimen/contact_text_size"
             android:textColor="@android:color/black"
+            android:transitionName="name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -40,5 +45,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+
+    <FrameLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/ivProfile"
+        android:layout_marginTop="-50dp">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_call"
+            app:fabSize="normal" />
+    </FrameLayout>
 </RelativeLayout>
 
