--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:cardElevation="@dimen/card_elevation">
 
@@ -17,6 +18,7 @@
 
         <ImageView
             android:id="@+id/ivProfile"
+            android:transitionName="profile"
             android:layout_width="match_parent"
             android:layout_height="@dimen/grid_profile_height"
             android:scaleType="centerCrop" />
@@ -29,12 +31,14 @@
             <View
                 android:id="@+id/vPalette"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:transitionName="palette" />
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:transitionName="name"
                 android:layout_centerInParent="true"
                 android:textSize="@dimen/contact_text_size"
                 android:textColor="@android:color/black" />
